# lady-or-tiger

./: .gitignore  LICENSE  Makefile  README.md  README.txt  corridor.txt  grammar.tatsu  lady0.txt  lady1.txt  lady10.txt  lady11.txt  lady12.txt  lady1b.txt  lady2.txt  lady3.txt  lady4.txt  lady5.txt  lady6.txt  lady7.txt  lady8.txt  lady9.txt  poc.html  pom.xml  puzzle1.txt  puzzle2.txt  puzzle3.txt  puzzle4.txt  puzzle5.txt  puzzle7.txt  pyproject.toml
documentos/: Gramática da nova sintaxe dos puzzles.docx  Proposta POC II.doc  notas.doc  poc.html
ladytiger/: parser.py  problem.py  solution.py
puzzles/: lady10.txt  lady11.txt  lady12.txt  lady2.txt  lady3.txt  lady4.txt  lady6.txt  lady7.txt  lady9.txt  ladyortiger.adoc  vovovera.txt
puzzles/novasintaxe/: lady0.txt  lady1.txt  lady10.txt  lady11.txt  lady12.txt  lady12b.txt  lady12c.txt  lady1b.txt  lady1c.txt  lady1d.txt  lady1e.txt  lady2.txt  lady3.txt  lady5.txt  lady8.txt
puzzles/outros/: corridor.txt  puzzle6.txt
src/main/java/poc/: Envelope.java  ExcecaoImplementacao.java  Ramo.java  Solucionador.java  Suposicao.java  Tableaux.java  TesteExecutor.java  TestePerformance.java  TesteSimples.java
src/main/java/poc/afirmativa/: Afirmativa.java  Bicondicional.java  Conjuncao.java  Disjuncao.java  Expansao.java  Implicacao.java  Localizacao.java  Negacao.java  Referencia.java
src/main/java/poc/minimize/: Atribuicao.java  Mintermo.java  (+5 more)
src/test/java/poc/: CorrecaoTest.java  LocalizacaoTest.java  RamoTest.java  SolucionadorPresencaTest.java  SuposicaoTest.java
tests/: test_acceptance.py  test_problem.py
(+21 files in other folders)
